added user task details search
